src/test/deca/context/invalid/provided/ContextSansObjet/IdentificationStringAssignBool.deca
{
	String x;
	x = true;
	println(x);
}